# ops-cli-py

./: .codeclimate.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md  ops-cli  requirements.txt
cli-commands/: interface.py  lldp.py  stdcmd.py
commands/: configure.py  stdcmd.py
opscli/: CMakeLists.txt  cli.py  command.py  console.py  context.py  linehelper.py  output.py  ovsdb.py
opscli/command/: CMakeLists.txt  command.py  command_test.py  context.py  context_test.py  integration_test.py  match.py  match_test.py  option.py  option_test.py  parse.py  parse_test.py  parser.py  parser_test.py  token.py  token_test.py
to-convert/: configure.py  vlan.py
tokens/: common.py  common_test.py
